@@ -52,7 +52,7 @@ if (!empty($id_bookmark)) {
     require_once('./libraries/bookmark.lib.php');
     switch ($action_bookmark) {
         case 0: // bookmarked query that have to be run
-            $sql_query = PMA_queryBookmarks($db, $cfg['Bookmark'], $id_bookmark);
+            $sql_query = PMA_queryBookmarks($db, $cfg['Bookmark'], $id_bookmark,'id', (isset($action_bookmark_all) ? TRUE : FALSE));
             if (isset($bookmark_variable) && !empty($bookmark_variable)) {
                 $sql_query = preg_replace('|/\*(.*)\[VARIABLE\](.*)\*/|imsU', '${1}' . PMA_sqlAddslashes($bookmark_variable) . '${2}', $sql_query);
             }
