@@ -7,6 +7,8 @@ $Source$
 
 2004-02-11 Marc Delisle  <lem9@users.sourceforge.net>
     * server_privileges.php: bug 818654, password not copied
+    * read_dump.php, libraries/display_tbl.lib.php, /bookmark.lib.php:
+      bug 879005: execute stored bookmarks when user is different
 
 2004-02-08 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza).
